--- a/ms-server/pom.xml
+++ b/ms-server/pom.xml
@@ -11,5 +11,41 @@
 
     <artifactId>ms-server</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.github.easyzhang</groupId>
+            <artifactId>ms-constants</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.github.easyzhang</groupId>
+            <artifactId>ms-provider</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.easyzhang</groupId>
+            <artifactId>ms-scripting</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.easyzhang</groupId>
+            <artifactId>ms-database</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.easyzhang</groupId>
+            <artifactId>ms-handling</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.easyzhang</groupId>
+            <artifactId>ms-tools</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
