--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.13</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>3.1.0</version>
+    </dependency>
   </dependencies>
 
   <build>
