切换成了新的数据库连接池

--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
           <archive>
             <manifest>
               <!-- 此处指定main方法入口的class -->
-              <mainClass>net.sf.odinms.server.Start</mainClass>
+              <mainClass>net.sf.odinms.Bootstrap</mainClass>
             </manifest>
           </archive>
           </configuration>
