--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,12 @@
   <version>1.0-SNAPSHOT</version>
   <dependencies>
     <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.23</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.mina</groupId>
       <artifactId>mina-core</artifactId>
       <version>2.0.19</version>
